--- a/src/app/components/widget-list/widget-list.component.html
+++ b/src/app/components/widget-list/widget-list.component.html
@@ -1,3 +1,34 @@
-<p>
-  widget-list works!
-</p>
+<div class="list-group">
+  <a *ngFor="let widget of widgets" class="list-group-item list-group-item-action">
+    <div [ngSwitch]="widget.type">
+      <div *ngSwitchCase="'HEADING'">
+        <div [ngSwitch]="widget.size">
+          <h1 *ngSwitchCase="'1'">{{widget.text}}</h1>
+          <h2 *ngSwitchCase="'2'">{{widget.text}}</h2>
+          <h3 *ngSwitchCase="'3'">{{widget.text}}</h3>
+          <h4 *ngSwitchCase="'4'">{{widget.text}}</h4>
+          <h5 *ngSwitchCase="'5'">{{widget.text}}</h5>
+          <h6 *ngSwitchCase="'6'">{{widget.text}}</h6>
+        </div>
+      </div>
+      <div *ngSwitchCase="'IMAGE'">
+        <img src={{widget.url}} alt="image widget">
+      </div>
+      <div *ngSwitchCase="'LIST'">
+          <div [ngSwitch]="widget.listType">
+            
+            <ul *ngSwitchCase="'0'">
+                <li *ngFor="let listItem of widget.ltext.split('/n')">{{listItem}}</li>
+            </ul>
+            <ol *ngSwitchCase="'1'">
+                <li *ngFor="let listItem of widget.ltext.split('/n')">{{listItem}}</li>
+            </ol>
+        </div>
+      </div>
+      <div *ngSwitchCase="'PARAGRAPH'">
+        <p>{{widget.ptext}}</p>
+      </div>
+
+    </div>
+  </a>
+</div>
