--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div style="text-align:center">
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-6">Welcome to {{ title }}!</h1>
+      <h1 class="display-6" routerLink="">Welcome to {{ title }}!</h1>
       <!-- <p class="lead">Click on the button to view the course grid</p> -->
       <!-- <button routerLink="course" class="btn btn-primary">
           Course Grid
